--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,8 @@ body {
     background-color: #464646;
     color: #6b6b6b;
 }
+
+.offer .example {
+    text-decoration: none;
+    color: #858585;
+}
