--- a/styles.css
+++ b/styles.css
@@ -12,57 +12,110 @@ body {
     margin: 0px;
 }
 
-.title {
-    font-family: 'Source Sans Pro';
-    font-size: 50px;;
-    color: #ababab;
-    margin: 25px;
-    animation: title_animation;
-    animation-duration: 1.5s;
+header {
+    padding: 25px;
 }
 
-@keyframes title_animation {
-    from {
-        padding-top: 40px;
-    }
-    to {
-        padding-top: 0px;
-    }
+.title {
+    font-family: 'Source Sans Pro';
+    font-size: 35px;
+    color: #cacaca;
+    display: inline;
 }
 
 .subtitle {
     font-family: 'Source Sans Pro';
-    font-size: 25px;;
-    color: #5c5c5c;
-    margin: 25px;
-    animation: subtitle_animation;
-    animation-duration: 1.5s;
+    font-size: 35px;
+    color: #b1b1b1;
+    padding: 25px;
 }
 
-@keyframes subtitle_animation {
-    from {
-        margin-left: -25px;
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: #2b2b2be7 !important;
+    top: 0;
+}
+
+nav {
+    margin-top: 15px;
+    float: right;
+    clear: both;
+}
+
+nav a {
+    font-family: 'Source Sans Pro';
+    font-size: 15px;
+    color: #cacaca;
+    text-decoration: none;
+    margin-left: 25px;
+}
+
+.start {
+    height: 100vh;
+}
+
+.start img {
+    position: absolute;
+    min-width: 100%;
+    height: 100%;
+}
+
+#img1 {
+    opacity: 0.5;
+    animation-name: img1_animation;
+    animation-duration: 25s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes img1_animation {
+    0% {
+        opacity: 0;
     }
-    to {
-        margin-left: 25px;
+    50% {
+        opacity: 0.2;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+#img2 {
+    animation-name: img2_animation;
+    animation-duration: 25s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes img2_animation {
+    0% {
+        opacity: 0.2;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.2;
     }
 }
 
 .initial_text {
     font-family: 'Source Sans Pro';
-    font-size: 20px;
-    color: #8a8a8a;
-    margin: 25px;
-    animation: initial_text_animation;
-    animation-duration: 1.5s;
+    font-size: 60px;
+    color: #c2c2c2;
+    margin-left: 5%;
+    top: 15%;
+    position: relative;
+    animation-name: initial_text_animation;
+    animation-duration: 3.5s;
 }
 
 @keyframes initial_text_animation {
     from {
-        opacity: 0.1;
+        padding-top: 40px;
     }
     to {
-        opacity: 1;
+        padding-top: 0px;
     }
 }
 
@@ -134,13 +187,13 @@ body {
 
 .offer h1 {
     font-size: 40px;
-    color: #929292;
+    color: #a3a3a3;
     margin: 0px;
 }
 
 .offer .introduction {
     font-size: 17px;
-    color: #666565;
+    color: #7e7e7e;
 }
 
 .offer .prices {
