--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ header {
     font-size: 35px;
     color: #b1b1b1;
     padding: 25px;
+	margin-bottom: -20px;
 }
 
 header {
@@ -120,110 +121,8 @@ nav a {
     }
 }
 
-.offers {
+.text {
     font-family: 'Source Sans Pro';
-    font-size: 20px;
+    padding: 25px;
     color: #8a8a8a;
-    padding: 25px;
-    background-color: #333333;
-    animation: offers_animation;
-    animation-duration: 1.5s;
-}
-
-@keyframes offers_animation {
-    from {
-        opacity: 0.1;
-        padding-top: 65px;
-    }
-    to {
-        opacity: 1;
-        padding-top: 25px;
-    }
-}
-
-.offers a {
-    color: #686767;
-    text-decoration: none;
-    transition: 0.5s;
-}
-
-.offers a:hover {
-    color: #7e7e7e;
-    text-decoration: none;
-}
-
-.offer {
-    font-family: 'Source Sans Pro';
-    padding: 25px;
-    margin: 25px;
-    -webkit-box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-    -moz-box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-    box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-    animation: offer_animation;
-    animation-duration: 1.5s;
-    transition: 0.5s;
-}
-
-@keyframes offer_animation {
-    from {
-        -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-        -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-        box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-        margin-top: 65px;
-    }
-    to {
-        -webkit-box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-        -moz-box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-        box-shadow: 10px 10px 20px 0px rgba(0,0,0,1);
-        margin-top: 25px;
-    }
-}
-
-.offer:hover {
-    transform: scale(1.01);
-    -webkit-box-shadow: 10px 10px 43px 0px rgba(0,0,0,1);
-    -moz-box-shadow: 10px 10px 43px 0px rgba(0,0,0,1);
-    box-shadow: 10px 10px 43px 0px rgba(0,0,0,1);
-}
-
-.offer h1 {
-    font-size: 40px;
-    color: #a3a3a3;
-    margin: 0px;
-}
-
-.offer .introduction {
-    font-size: 17px;
-    color: #7e7e7e;
-}
-
-.offer .prices {
-    color: #666565;
-}
-
-.offer .prices p {
-    color: #8f8f8f;
-}
-
-.offer .simulation {
-    color: #666565;
-}
-
-.offer .simulation p {
-    color: #8f8f8f;
-}
-
-#n_pages {
-    border: solid;
-    border-width: 1px;
-    border-radius: 10px;
-    border: none;
-    padding: 5px;
-    background-color: #464646;
-    color: #6b6b6b;
-}
-
-.offer .example {
-    text-decoration: none;
-    color: #858585;
 }
