--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header {
     font-size: 35px;
     color: #b1b1b1;
     padding: 25px;
-	margin-bottom: -20px;
+	margin-bottom: -40px;
 }
 
 header {
@@ -125,4 +125,59 @@ nav a {
     font-family: 'Source Sans Pro';
     padding: 25px;
     color: #8a8a8a;
+}
+
+.form {
+	margin-left: 25px;
+}
+
+input {
+	font-family: 'Source Sans Pro';
+	font-size: 15px;
+	padding-left: 15px;
+	border-radius: 20px;
+	width: 200px;
+	margin-bottom: 3px;
+}
+
+textarea {
+	font-family: 'Source Sans Pro';
+	font-size: 15px;
+	padding-left: 15px;
+	border-radius: 20px;
+	width: 200px;
+}
+
+button {
+	font-family: 'Source Sans Pro';
+	font-size: 15px;
+	padding: 15px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	border-radius: 20px;
+	border: none;
+	background-color: #3b3b3b;
+	color: #bfbfbf;
+	transition: all 0.3s;
+}
+
+button:hover {
+	background-color: #5c5c5c;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(255, 255, 255, 000);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #4d4d4d; 
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #383838; 
 }
