--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ input {
 	border-radius: 20px;
     border: none;
 	width: 200px;
-	margin-bottom: 4px;
+	margin-bottom: 2px;
     color: #9e9e9e;
     background-color: #4d4d4d;  
 }
@@ -161,6 +161,7 @@ textarea {
 	border-radius: 20px;
     border: none;
 	width: 200px;
+    margin-bottom: 10px;
     color: #9e9e9e;
     background-color: #4d4d4d;  
 }
@@ -180,6 +181,24 @@ button {
 
 button:hover {
 	background-color: #5c5c5c;
+}
+
+footer {
+    font-family: 'Source Sans Pro';
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #1c1c1c;
+    color: #5e5e5e;
+}
+
+footer a img {
+    max-width: 30px;
+    margin-right: 15px;
+    transition: all 0.7s;
+}
+
+footer a img:hover {
+    opacity: 0.6;
 }
 
 ::-webkit-scrollbar {
