--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,21 @@ header {
     padding: 25px;
 }
 
+#logo {
+	max-height: 55px;
+	animation: logo_animation;
+	animation-duration: 3.5s;
+}
+
+@keyframes logo_animation {
+	from {
+		opacity: 0.2;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 .title {
     font-family: 'Source Sans Pro';
     font-size: 35px;
@@ -53,6 +68,7 @@ nav {
     margin-top: 15px;
     float: right;
     clear: both;
+	align-items: center;
 }
 
 nav a {
@@ -62,6 +78,19 @@ nav a {
     text-decoration: none;
     margin-left: 25px;
     transition: all 0.5s;
+	animation: menu_animation;
+	animation-duration: 2.5s;
+}
+
+@keyframes menu_animation {
+	from {
+		opacity: 0.3;
+		margin-left: 50px;
+	}
+	to {
+		opacity: 1;
+		margin-left: 25px;
+	}
 }
 
 nav a:hover {
